--- a/app/views/todos/_top.html.haml
+++ b/app/views/todos/_top.html.haml
@@ -1,1 +1,21 @@
-top
+.toppage
+  .header
+    .header__title
+      おうちキレイ
+    .header__subtitle
+      5min-Habits
+  .login
+    .login__left
+      .login__left__form
+        %label.login__left__form__login ログイン
+        %label.login__left__form__signup 新規登録
+        %label.login__left__form__pwforget パスワードをお忘れの方
+
+    .login__right
+      .login__right__form
+        %label.login__left__form__name
+        %label.login__left__form__nickname
+        %label.login__left__form__email
+        %label.login__left__form__email
+
+
