--- a/app/assets/stylesheets/_todos.scss
+++ b/app/assets/stylesheets/_todos.scss
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
 }
-・toppage {
+.toppage {
   background-color: rgba(159, 247, 255, 0.5);
   height: 100%;
   width: 100%;
