--- a/app/assets/stylesheets/_todos.scss
+++ b/app/assets/stylesheets/_todos.scss
@@ -2,17 +2,33 @@
   box-sizing: border-box;
 }
 .toppage {
-  background-color: rgba(159, 247, 255, 0.5);
   height: 100%;
-  width: 100%;
+  width: 1440px;
   
-  .header {
-    height: 150px;
-    width: 100%;
-    background-color: rgba(56, 132, 247, 0.5);
-    &__title {
+  .top {
+    &__album {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      margin: auto;     
+      background-color: #fff;
+    }
+    &__album__title {
+      position: absolute;
       color: white;
-      font-size: 28px;
+      font-family :Quicksand, Courier New;
+      font-size: 77px;
+      top: 20%;
+      left: 10%;
+      p.subtitle {
+        font-size: 50px;
+      }
+      
+    }
+    &__album img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
