--- a/app/views/todos/_top.html.haml
+++ b/app/views/todos/_top.html.haml
@@ -1,16 +1,7 @@
 .toppage
-  .header
-    .header__title
-      おうちキレイ
-    .header__subtitle
-      5min-Habits
-  .login
-    .login__left
-      .login__left__title 本日5/23(土)の<br>おうちキレイTODO
-      %li.todo トイレ掃除
-      %li.todo キッチン床ふき
-      %li.todo 排水口の掃除
-
-    .login__right
-      .login__right__form
-        
+  .top
+    .top__album
+      = image_tag srg= "table.jpg", class: "img1", size: "1440x831"
+      .top__album__title
+        %p.title おうちキレイ
+        %p.subtitle 5min-Habits
