--- a/app/views/todos/_top.html.haml
+++ b/app/views/todos/_top.html.haml
@@ -1,7 +1,13 @@
-.toppage
-  .top
-    .top__album
-      = image_tag srg= "table.jpg", class: "img1", size: "1440x831"
-      .top__album__title
-        %p.title おうちキレイ
-        %p.subtitle 5min-Habits
+.header
+  .header__top
+    .header__top__login
+    .header__top__signup
+
+.top
+  .top__title
+    %p.title おうちキレイ
+    %p.subtitle 5min-Habits
+  .top__info
+    %p.title-1 ふっと気がついたら
+    %p.title-1 毎日の簡単おそうじが習慣になっちゃった。
+    %p.title-1 <br>お出かけ前の歯みがきみたいに。
