--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "reset";
-@import "todos";
+// @import "todos";
+@import "header";
 @import "font-awesome-sprockets";
 @import "font-awesome";
