--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,26 +1,18 @@
-* {
-  box-sizing: border-box;
-  font-family :Quicksand, Courier New;
-}
-  
-
 .header {
   height: 130px;
   display: -webkit-flex;
   display: flex;
-  -webkit-justify-content: space-between;
   justify-content: space-between;
-  background-image: url("header-1.jpg");
-  filter:brightness(130%);
-  background-size: cover;
-  background-position: center;
+  // background-image: url("header-1.jpg");
+  // filter:brightness(130%);
+  // background-size: cover;
+  // background-position: center;
   &__left {
     background-size: cover;
     background-position: center;
     display: -webkit-flex;
     display: flex;
     color: #050511;
-
     &__title {
       margin: 15px 0 0 25px;
       font-size: 50px;
@@ -44,7 +36,6 @@
       }
     }
   }
-
   &__right {
     text-align: right;
     &__new, &__login {
