--- a/app/views/todos/_main.html.haml
+++ b/app/views/todos/_main.html.haml
@@ -13,6 +13,16 @@
       %p.main-list__list__4
       %p.main-list__list__5
 
+%h1 タスク一覧
+%table
+  %thead
+    %tr 
+      %th タスク名
+  %tbody 
+    = @todos.each do |todo|
+      %tr 
+        %td 
+        = todo.title
 
 -# <h1>タスク一覧</h1>
 -# <table>
