--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -3,10 +3,10 @@
   display: -webkit-flex;
   display: flex;
   justify-content: space-between;
-  // background-image: url("header-1.jpg");
-  // filter:brightness(130%);
-  // background-size: cover;
-  // background-position: center;
+  background-image: url("header-1.jpg");
+  filter:brightness(130%);
+  background-size: cover;
+  background-position: center;
   &__left {
     background-size: cover;
     background-position: center;
