--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,6 @@
 @import "reset";
 // @import "todos";
 @import "header";
-@import "main";
+@import "new";
 @import "font-awesome-sprockets";
 @import "font-awesome";
