--- a/app/views/todos/_header.html.haml
+++ b/app/views/todos/_header.html.haml
@@ -16,7 +16,7 @@
         = link_to "#", method: :delete, class: "header__right__new" do
           ログアウト
       - else
-        = link_to "#", class:"header__right__login" do
+        = link_to "user_registration_path", class:"header__right__login" do
           ログイン
         = link_to "#", class:"header__right__new" do
           新規登録
