--- a/app/views/todos/_new.html.haml
+++ b/app/views/todos/_new.html.haml
@@ -1,10 +1,34 @@
-.box
-  .main
-    .main-title
-      .main-title__today 今日のお掃除
-      %span.main-title__date 7/14 Tues
-
-    .main-list
-      = @todos.each do |todo|
-        .main-list__todo
-          = todo.title
+.main-new
+  .content-new
+    = form_for @todo do |f|
+      = render 'layouts/error', model: f.object
+      
+      .box-new
+        .box-new__title
+          %label キッチン
+          %span.box-new__title__must 必須
+        =f.text_field :name, class:"box-new__input", placeholder: "40文字まで"
+        
+      .box-new
+        .box-new__title
+          %label リビング
+          %span.box-new__title__must 必須
+        = f.select :, [["新品、未使用","新品、未使用"], ["未使用に近い","未使用に近い"], ["目立った傷や汚れなし","目立った傷や汚れなし"], ["やや傷や汚れあり","やや傷や汚れあり"], ["傷や汚れあり","傷や汚れあり"], ["全体的に状態が悪い","全体的に状態が悪い"]], prompt: '選択してください'
+      
+      .box-new
+        .box-new__title
+          %label 水まわり
+          %span.box-new__title__must 必須
+        = f.select :tilte, Prefecture.all, :id, :name, {prompt: '選択して下さい'}
+        
+      .box-new
+        .box-new__title
+          %label 
+          %span.box-new__title__must 必須
+        = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {prompt: '選択して下さい'}
+        
+      .box-new
+        .box-new__title
+          %label 発送までの日数
+          %span.box-new__title__must 必須
+        =f.select  :prefecture_id, Prefecture.all, :id, :name, {prompt: '選択して下さい'}
